/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package dragonballgame;

/**
 *
 * @author polenzani.pietro
 */
public class FileManager {
    private String loadCSVpath;
    private String saveCSVpath;
    private String loadBinaryPath;
    private String saveBinaryPath;
}
