/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package dragonballgame;

/**
 *
 * @author polenzani.pietro
 */
public class Vegeta extends Character{

    public Vegeta(int aura, int att, int stamina, int hp) {
        super(aura, att, stamina, hp);
    }

    public void attack(){
        
    }
    public void specialAttack(){
        
    }
    public  void specialAbility(){
        
    }
    public  void auraCharge(){
        
    }
}
